--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-graphql": "^0.8.0",
     "express-validator": "^6.1.0",
+    "graphql": "^14.4.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.2",
     "multer": "^1.4.1",
     "socket.io": "^2.2.0",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "validator": "^11.1.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
